finalize matrix with resizer

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "apexcharts": "^3.53.0",
+    "events": "^3.3.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-draggable-resizable": "^3.0.0",
